fixed section headers spacing and font size

--- a/assets/styles/helpers.scss
+++ b/assets/styles/helpers.scss
@@ -46,17 +46,17 @@ $sides: (Top, Bottom, Left, Right); // Leave this variable alone
   font-weight: 400;
 
   @include respond-to(sm) {
-      font-size: calc(1.10 * #{$base--header-font-size}) !important;
+      font-size: calc(1 * #{$base--header-font-size}) !important;
       padding: $vertical--space-sm 0 !important;
   }
 
   @include respond-to(md) {
-      font-size: calc(1.30 * #{$base--header-font-size}) !important;
+      font-size: calc(1.15 * #{$base--header-font-size}) !important;
       padding: $vertical--space-md 0 !important;
   }
 
   @include respond-to(lg) {
-      font-size: calc(1.50 * #{$base--header-font-size}) !important;
+      font-size: calc(1.30 * #{$base--header-font-size}) !important;
       padding: $vertical--space-lg 0 !important;
   }
 }
